    - Updated spanish translation
  * Claus Hindsgaul
    - Update da (Danish) translation.
  * Denis Barbier
    - In makeheader.pl, default values for mirror countries were marked
      as translatable, but the wrong way because msgids were similar to
      the ones found in Choices fields.  As a result, Default values
      were translated in the generated templates file.
  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
  * Miroslav Kure
    - Update Czech translation.
  * Bart Cornelis
    - Update Dutch translation (nl.po)

 -- Bart Cornelis <cobaco@linux.be>  Wed, 12 Nov 2003 17:05:26 +0100

choose-mirror (0.021) unstable; urgency=low

  * Kęstutis Biliūnas
    - Update Lithuanian translation.
  * Tommi Vainikainen
    - Update Finnish (fi.po) translation.
  * Miroslav Kure
    - Update Czech translation.
  * Sebastian Ley
    - Fix manual mirror entry  (Closes: #219503)
  * Peter Mann
    - Initial Slovak translation (sk.po).
  * Alastair Mckinstry
    - Reset default mirror question to "high" by popular demand.
     Closes: #219716.
    Ensure the correct previous question is chosen no matter what
    priority the questions have.
  * Denis Barbier
    - Sort country names according to current language.

 -- Sebastian Ley <ley@debian.org>  Mon, 10 Nov 2003 09:59:44 +0100

choose-mirror (0.020) unstable; urgency=low

  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
    - Actually, unfuzzy one template translation.
  * Bart cornelis
    - update dutch translation (nl.po)
  * Pierre Machard
    - Update French translation.
  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Joey Hess
    - Change priority to extra; this package should not be pulled in
      to CD installs and the like.

 -- Joey Hess <joeyh@debian.org>  Sun,  2 Nov 2003 22:02:36 -0500

choose-mirror (0.019) unstable; urgency=low

  * Alastair McKinstry
    - Support backup capabilities.