@@ -9,6 +9,8 @@ choose-mirror (0.022) UNRELEASED; urgency=low
       as translatable, but the wrong way because msgids were similar to
       the ones found in Choices fields.  As a result, Default values
       were translated in the generated templates file.
+    - Discard sorting countries, it does not work within the
+      debian-installer, because locales are not installed.
   * André Luís Lopes
     - Update pt_BR (Brazilian Portuguese) translation.
   * Miroslav Kure
